import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

// Helper: wrap code with a node:test import
const withImport = code => `import test from 'node:test';\n${code}`;
const withHookImport = code => `import test, {beforeEach} from 'node:test';\n${code}`;

test.snapshot({
	valid: [

		// Not a test file — no import from node:test
		'test(async t => {});',
		// Sync callback — no async keyword
		withImport('test("title", t => {});'),
		withImport('test("title", function(t) {});'),
		// Async WITH await — should not be flagged
		withImport('test("title", async t => { await foo(); });'),
		withImport('test("title", async function(t) { await foo(); });'),
		withImport('test("title", async t => { t.is(await foo(), 1); });'),
		withImport('test("title", async t => { if (bar) { await foo(); } });'),
		withImport('test("title", async t => { if (bar) {} else { await foo(); } });'),
		// For-await-of
		withImport('test("title", async t => { for await (const x of gen()) {} });'),
		// An `await using` declaration suspends while it acquires the resource, without an `await`
		withImport('test("title", async t => { await using resource = getResource(); });'),
		withImport('test("title", async t => { await using resource = getResource(); using other = getOther(); });'),
		// Await inside nested async function is NOT counted — but the outer function also awaits
		withImport('test("title", async t => { await foo(); const helper = async () => { await bar(); }; });'),
		// Hooks with await are valid
		withImport('import {before} from "node:test";\nbefore(async () => { await setup(); });'),
		withImport('import {afterEach} from "node:test";\nafterEach(async () => { await cleanup(); });'),
		// It() alias with await
		withImport('import {it} from "node:test";\nit("title", async t => { await foo(); });'),
		// No callback at all
		withImport('test("title");'),
		// Shadowed import name
		withImport('function helper(test) {\n\ttest("local", async () => {});\n}\nhelper(localTest);'),
		// Async suite callbacks are out of scope (owned by `no-async-describe`)
		withImport('import {describe} from "node:test";\ndescribe("s", async () => {});'),
		withImport('import {suite} from "node:test";\nsuite("s", async () => {});'),
		// The descriptor method form with an await is valid
		withImport('test({name: "x", async fn() { await foo(); }});'),
		// Global assertion configuration is not a test registration.
		withImport('test.assert.register("custom", async () => {});'),
		// A bare `test` package is not Node's test runner.
		'import test from "test";\ntest("title", async t => {});',

		// Subtest and context-hook callbacks with an await are valid
		withImport('test(\'a\', t => { t.test(\'b\', async () => { await foo(); }); });'),
		withImport('test(\'a\', t => { t.beforeEach(async () => { await foo(); }); });'),
	],
	invalid: [
		// A comment between `async` and the callback would be removed with the keyword,
		// so the test is reported but no fix is offered
		'import test from \'node:test\';\ntest(\'a\', async /* keep me */ () => { foo(); });',
		'import test from \'node:test\';\ntest(\'a\', async /* keep me */ function () { foo(); });',

		// Basic async arrow with no await
		withImport('test("title", async t => {});'),
		// Basic async function expression with no await
		withImport('test("title", async function(t) {});'),
		// No title
		withImport('test(async t => {});'),
		// Named import
		'import {test} from "node:test";\ntest("title", async t => {});',
		// Renamed import
		'import {test as t} from "node:test";\nt("title", async fn => {});',
		// Namespace import
		'import * as nodeTest from "node:test";\nnodeTest.test("title", async t => {});',
		// It() alias
		'import {it} from "node:test";\nit("title", async t => {});',
		// Before() hook
		'import {before} from "node:test";\nbefore(async () => {});',
		// AfterEach() hook
		'import {afterEach} from "node:test";\nafterEach(async () => { foo(); });',
		// Await inside nested function does not count — outer is async without await
		withImport('test("title", async t => { async function helper() { await foo(); } });'),
		withImport('test("title", async t => { const helper = async () => { await foo(); }; });'),
		// For-await inside nested function does not count
		withImport('test("title", async t => { async function helper() { for await (const x of gen()) {} } });'),
		// TypeScript: async arrow with type annotation
		{
			code: 'import test from "node:test";\ntest("title", async (t: unknown) => {});',
			languageOptions: {parser: parsers.typescript},
		},
		// Two tests: only the second lacks await
		withImport('test("a", async t => { await foo(); });\ntest("b", async t => {});'),
		// The descriptor form keeps the `async` keyword on the surrounding property, not on the
		// function value, so the keyword must be looked up from the property (this used to crash).
		withImport('test({name: "x", async fn() {}});'),
		// A comment between `async` and the method name would be removed with the keyword,
		// so the test is reported but no fix is offered
		'import test from \'node:test\';\ntest({name: "x", async /* keep me */ fn() {}});',
		// Subtests and context hooks are test/hook callbacks too
		withImport('test(\'a\', t => { t.test(\'b\', async () => {}); });'),
		withImport('test(\'a\', t => { t.beforeEach(async () => {}); });'),
	],
});

test.snapshot({
	valid: [
		// A hook's trailing options must not hide a callback that does contain an await
		'import {beforeEach} from "node:test";\nbeforeEach(async () => { await foo(); }, {timeout: 1000});',
		'import {before} from "node:test";\nbefore(async () => { await foo(); }, {timeout: 1});',

		// An async generator with only `yield` has no `await`, but removing `async` would break it,
		// so a `yield` still counts as a suspension point for this rule
		withImport('test("title", async function * () { yield 1; });'),

		// A hook whose first argument is not a function never runs, so a function in a later slot is
		// dead code, and the runner never reads `options.fn` for a hook either
		withHookImport('beforeEach({}, async () => { foo(); });'),
		withHookImport('beforeEach({fn: async () => {}});'),
		withHookImport('test.beforeEach({}, async () => { foo(); });'),
		withHookImport('test.beforeEach({fn: async () => {}});'),
		withImport('test(\'title\', t => { t.beforeEach({}, async () => { foo(); }); });'),
		withImport('test(\'title\', t => { t.beforeEach({fn: async () => {}}); });'),
		withImport('test(\'title\', t => { async function body() { foo(); } t.beforeEach({}, body); });'),
		// A context hook body the call names out of line that does await is fine
		withImport('test(\'title\', async t => { async function body() { await foo(); } t.beforeEach(body); await t.test(\'x\', () => {}); });'),
	],
	invalid: [
		// A hook's trailing options must not hide an async callback with no await
		'import {before} from "node:test";\nbefore(async () => {}, {timeout: 1});',
		// A test body the call names out of line is checked the same way: the function is the callback
		withImport('const fn = async t => { foo(); };\ntest("title", fn);'),

		// A test or hook body the call names out of line is checked the same way
		'import {test} from \'node:test\';\nconst body = async () => { foo(); };\ntest(\'a\', body);',
		'import {test} from \'node:test\';\nasync function body() { foo(); }\ntest(\'a\', body);',
		'import {test} from \'node:test\';\nconst body = async () => { foo(); };\ntest(\'a\', {fn: body});',
		'import {before} from \'node:test\';\nconst body = async () => { foo(); };\nbefore(body);',

		'import {beforeEach} from "node:test";\nbeforeEach(async () => { foo(); }, {timeout: 1000});',
		'import {after} from "node:test";\nafter(async () => {}, {timeout: 1});',
		'import {afterEach} from "node:test";\nafterEach(async () => {}, {timeout: 1});',
		'import test from "node:test";\ntest.beforeEach(async () => {}, {timeout: 1});',

		// A hook declared through `getTestContext()` is the same hook
		'import {test, getTestContext} from \'node:test\';\nimport assert from \'node:assert\';\ntest(\'o\', t => { getTestContext().beforeEach(async () => { assert.ok(1); }); });',

		// An async generator with no `yield` and no `await` is still reported, but removing `async`
		// would turn an `AsyncGeneratorFunction` into a plain `GeneratorFunction`, so no suggestion
		withImport('test("title", async function * () { foo(); });'),
		withImport('test("title", async function * named() { foo(); });'),
		'import {beforeEach} from "node:test";\nbeforeEach(async function * () { foo(); });',

		// A context hook body the call names out of line is checked the same way as an inline one
		withImport('test(\'p\', async t => { async function body() { foo(); } t.beforeEach(body); await t.test(\'x\', () => {}); });'),
	],
});
