exports[`no-async-fn-without-await > invalid(1): import test from 'node:test';\ntest('a', async /* keep me */ () => { foo(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('a', async /* keep me */ () => { foo(); });

`;

exports[`no-async-fn-without-await > invalid(1): import test from 'node:test';\ntest('a', async /* keep me */ () => { foo(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('a', async /* keep me */ () => { foo(); });
    |           ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

`;

exports[`no-async-fn-without-await > invalid(1): import {before} from \"node:test\";\nbefore(async () => {}, {timeout: 1}); 1`] = `

  1 | import {before} from "node:test";
  2 | before(async () => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(1): import {before} from \"node:test\";\nbefore(async () => {}, {timeout: 1}); 2`] = `

Message:
  1 | import {before} from "node:test";
> 2 | before(async () => {}, {timeout: 1});
    |        ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {before} from "node:test";
  2 | before(() => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(10): import test from \"node:test\";\ntest.beforeEach(async () => {}, {timeout: 1}); 1`] = `

  1 | import test from "node:test";
  2 | test.beforeEach(async () => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(10): import test from \"node:test\";\ntest.beforeEach(async () => {}, {timeout: 1}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test.beforeEach(async () => {}, {timeout: 1});
    |                 ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from "node:test";
  2 | test.beforeEach(() => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(10): import {before} from \"node:test\";\nbefore(async () => {}); 1`] = `

  1 | import {before} from "node:test";
  2 | before(async () => {});

`;

exports[`no-async-fn-without-await > invalid(10): import {before} from \"node:test\";\nbefore(async () => {}); 2`] = `

Message:
  1 | import {before} from "node:test";
> 2 | before(async () => {});
    |        ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {before} from "node:test";
  2 | before(() => {});

`;

exports[`no-async-fn-without-await > invalid(11): import {afterEach} from \"node:test\";\nafterEach(async () => { foo(); }); 1`] = `

  1 | import {afterEach} from "node:test";
  2 | afterEach(async () => { foo(); });

`;

exports[`no-async-fn-without-await > invalid(11): import {afterEach} from \"node:test\";\nafterEach(async () => { foo(); }); 2`] = `

Message:
  1 | import {afterEach} from "node:test";
> 2 | afterEach(async () => { foo(); });
    |           ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {afterEach} from "node:test";
  2 | afterEach(() => { foo(); });

`;

exports[`no-async-fn-without-await > invalid(11): import {test, getTestContext} from 'node:test';\nimport assert from 'node:assert';\ntest('o', t => { getTestContext().beforeEach(async () => { assert.ok(1); }); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('o', t => { getTestContext().beforeEach(async () => { assert.ok(1); }); });

`;

exports[`no-async-fn-without-await > invalid(11): import {test, getTestContext} from 'node:test';\nimport assert from 'node:assert';\ntest('o', t => { getTestContext().beforeEach(async () => { assert.ok(1); }); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
> 3 | test('o', t => { getTestContext().beforeEach(async () => { assert.ok(1); }); });
    |                                              ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {test, getTestContext} from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('o', t => { getTestContext().beforeEach(() => { assert.ok(1); }); });

`;

exports[`no-async-fn-without-await > invalid(12): import test from 'node:test';\ntest(\"title\", async function * () { foo(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async function * () { foo(); });

`;

exports[`no-async-fn-without-await > invalid(12): import test from 'node:test';\ntest(\"title\", async function * () { foo(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async function * () { foo(); });
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

`;

exports[`no-async-fn-without-await > invalid(12): import test from 'node:test';\ntest(\"title\", async t => { async function helper() { await foo(); } }); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async t => { async function helper() { await foo(); } });

`;

exports[`no-async-fn-without-await > invalid(12): import test from 'node:test';\ntest(\"title\", async t => { async function helper() { await foo(); } }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async t => { async function helper() { await foo(); } });
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test("title", t => { async function helper() { await foo(); } });

`;

exports[`no-async-fn-without-await > invalid(13): import test from 'node:test';\ntest(\"title\", async function * named() { foo(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async function * named() { foo(); });

`;

exports[`no-async-fn-without-await > invalid(13): import test from 'node:test';\ntest(\"title\", async function * named() { foo(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async function * named() { foo(); });
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

`;

exports[`no-async-fn-without-await > invalid(13): import test from 'node:test';\ntest(\"title\", async t => { const helper = async () => { await foo(); }; }); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async t => { const helper = async () => { await foo(); }; });

`;

exports[`no-async-fn-without-await > invalid(13): import test from 'node:test';\ntest(\"title\", async t => { const helper = async () => { await foo(); }; }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async t => { const helper = async () => { await foo(); }; });
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test("title", t => { const helper = async () => { await foo(); }; });

`;

exports[`no-async-fn-without-await > invalid(14): import test from 'node:test';\ntest(\"title\", async t => { async function helper() { for await (const x of gen()) {} } }); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async t => { async function helper() { for await (const x of gen()) {} } });

`;

exports[`no-async-fn-without-await > invalid(14): import test from 'node:test';\ntest(\"title\", async t => { async function helper() { for await (const x of gen()) {} } }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async t => { async function helper() { for await (const x of gen()) {} } });
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test("title", t => { async function helper() { for await (const x of gen()) {} } });

`;

exports[`no-async-fn-without-await > invalid(14): import {beforeEach} from \"node:test\";\nbeforeEach(async function * () { foo(); }); 1`] = `

  1 | import {beforeEach} from "node:test";
  2 | beforeEach(async function * () { foo(); });

`;

exports[`no-async-fn-without-await > invalid(14): import {beforeEach} from \"node:test\";\nbeforeEach(async function * () { foo(); }); 2`] = `

Message:
  1 | import {beforeEach} from "node:test";
> 2 | beforeEach(async function * () { foo(); });
    |            ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

`;

exports[`no-async-fn-without-await > invalid(15): import test from 'node:test';\ntest('p', async t => { async function body() { foo(); } t.beforeEach(body); await t.test('x', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('p', async t => { async function body() { foo(); } t.beforeEach(body); await t.test('x', () => {}); });

`;

exports[`no-async-fn-without-await > invalid(15): import test from 'node:test';\ntest('p', async t => { async function body() { foo(); } t.beforeEach(body); await t.test('x', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('p', async t => { async function body() { foo(); } t.beforeEach(body); await t.test('x', () => {}); });
    |                        ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test('p', async t => { function body() { foo(); } t.beforeEach(body); await t.test('x', () => {}); });

`;

exports[`no-async-fn-without-await > invalid(15): import test from \"node:test\";\ntest(\"title\", async (t: unknown) => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", async (t: unknown) => {});

`;

exports[`no-async-fn-without-await > invalid(15): import test from \"node:test\";\ntest(\"title\", async (t: unknown) => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", async (t: unknown) => {});
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from "node:test";
  2 | test("title", (t: unknown) => {});

`;

exports[`no-async-fn-without-await > invalid(16): import test from 'node:test';\ntest(\"a\", async t => { await foo(); });\ntest(\"b\", async t => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", async t => { await foo(); });
  3 | test("b", async t => {});

`;

exports[`no-async-fn-without-await > invalid(16): import test from 'node:test';\ntest(\"a\", async t => { await foo(); });\ntest(\"b\", async t => {}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("a", async t => { await foo(); });
> 3 | test("b", async t => {});
    |           ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test("a", async t => { await foo(); });
  3 | test("b", t => {});

`;

exports[`no-async-fn-without-await > invalid(17): import test from 'node:test';\ntest({name: \"x\", async fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: "x", async fn() {}});

`;

exports[`no-async-fn-without-await > invalid(17): import test from 'node:test';\ntest({name: \"x\", async fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: "x", async fn() {}});
    |                  ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test({name: "x", fn() {}});

`;

exports[`no-async-fn-without-await > invalid(18): import test from 'node:test';\ntest({name: \"x\", async /* keep me */ fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: "x", async /* keep me */ fn() {}});

`;

exports[`no-async-fn-without-await > invalid(18): import test from 'node:test';\ntest({name: \"x\", async /* keep me */ fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: "x", async /* keep me */ fn() {}});
    |                  ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

`;

exports[`no-async-fn-without-await > invalid(19): import test from 'node:test';\ntest('a', t => { t.test('b', async () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('a', t => { t.test('b', async () => {}); });

`;

exports[`no-async-fn-without-await > invalid(19): import test from 'node:test';\ntest('a', t => { t.test('b', async () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('a', t => { t.test('b', async () => {}); });
    |                              ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test('a', t => { t.test('b', () => {}); });

`;

exports[`no-async-fn-without-await > invalid(2): import test from 'node:test';\nconst fn = async t => { foo(); };\ntest(\"title\", fn); 1`] = `

  1 | import test from 'node:test';
  2 | const fn = async t => { foo(); };
  3 | test("title", fn);

`;

exports[`no-async-fn-without-await > invalid(2): import test from 'node:test';\nconst fn = async t => { foo(); };\ntest(\"title\", fn); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | const fn = async t => { foo(); };
    |            ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.
  3 | test("title", fn);

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | const fn = t => { foo(); };
  3 | test("title", fn);

`;

exports[`no-async-fn-without-await > invalid(2): import test from 'node:test';\ntest('a', async /* keep me */ function () { foo(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('a', async /* keep me */ function () { foo(); });

`;

exports[`no-async-fn-without-await > invalid(2): import test from 'node:test';\ntest('a', async /* keep me */ function () { foo(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('a', async /* keep me */ function () { foo(); });
    |           ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

`;

exports[`no-async-fn-without-await > invalid(20): import test from 'node:test';\ntest('a', t => { t.beforeEach(async () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('a', t => { t.beforeEach(async () => {}); });

`;

exports[`no-async-fn-without-await > invalid(20): import test from 'node:test';\ntest('a', t => { t.beforeEach(async () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('a', t => { t.beforeEach(async () => {}); });
    |                               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test('a', t => { t.beforeEach(() => {}); });

`;

exports[`no-async-fn-without-await > invalid(3): import test from 'node:test';\ntest(\"title\", async t => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async t => {});

`;

exports[`no-async-fn-without-await > invalid(3): import test from 'node:test';\ntest(\"title\", async t => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async t => {});
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test("title", t => {});

`;

exports[`no-async-fn-without-await > invalid(3): import {test} from 'node:test';\nconst body = async () => { foo(); };\ntest('a', body); 1`] = `

  1 | import {test} from 'node:test';
  2 | const body = async () => { foo(); };
  3 | test('a', body);

`;

exports[`no-async-fn-without-await > invalid(3): import {test} from 'node:test';\nconst body = async () => { foo(); };\ntest('a', body); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | const body = async () => { foo(); };
    |              ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.
  3 | test('a', body);

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {test} from 'node:test';
  2 | const body = () => { foo(); };
  3 | test('a', body);

`;

exports[`no-async-fn-without-await > invalid(4): import test from 'node:test';\ntest(\"title\", async function(t) {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", async function(t) {});

`;

exports[`no-async-fn-without-await > invalid(4): import test from 'node:test';\ntest(\"title\", async function(t) {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", async function(t) {});
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test("title", function(t) {});

`;

exports[`no-async-fn-without-await > invalid(4): import {test} from 'node:test';\nasync function body() { foo(); }\ntest('a', body); 1`] = `

  1 | import {test} from 'node:test';
  2 | async function body() { foo(); }
  3 | test('a', body);

`;

exports[`no-async-fn-without-await > invalid(4): import {test} from 'node:test';\nasync function body() { foo(); }\ntest('a', body); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | async function body() { foo(); }
    | ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.
  3 | test('a', body);

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {test} from 'node:test';
  2 | function body() { foo(); }
  3 | test('a', body);

`;

exports[`no-async-fn-without-await > invalid(5): import test from 'node:test';\ntest(async t => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test(async t => {});

`;

exports[`no-async-fn-without-await > invalid(5): import test from 'node:test';\ntest(async t => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test(async t => {});
    |      ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import test from 'node:test';
  2 | test(t => {});

`;

exports[`no-async-fn-without-await > invalid(5): import {test} from 'node:test';\nconst body = async () => { foo(); };\ntest('a', {fn: body}); 1`] = `

  1 | import {test} from 'node:test';
  2 | const body = async () => { foo(); };
  3 | test('a', {fn: body});

`;

exports[`no-async-fn-without-await > invalid(5): import {test} from 'node:test';\nconst body = async () => { foo(); };\ntest('a', {fn: body}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | const body = async () => { foo(); };
    |              ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.
  3 | test('a', {fn: body});

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {test} from 'node:test';
  2 | const body = () => { foo(); };
  3 | test('a', {fn: body});

`;

exports[`no-async-fn-without-await > invalid(6): import {before} from 'node:test';\nconst body = async () => { foo(); };\nbefore(body); 1`] = `

  1 | import {before} from 'node:test';
  2 | const body = async () => { foo(); };
  3 | before(body);

`;

exports[`no-async-fn-without-await > invalid(6): import {before} from 'node:test';\nconst body = async () => { foo(); };\nbefore(body); 2`] = `

Message:
  1 | import {before} from 'node:test';
> 2 | const body = async () => { foo(); };
    |              ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.
  3 | before(body);

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {before} from 'node:test';
  2 | const body = () => { foo(); };
  3 | before(body);

`;

exports[`no-async-fn-without-await > invalid(6): import {test} from \"node:test\";\ntest(\"title\", async t => {}); 1`] = `

  1 | import {test} from "node:test";
  2 | test("title", async t => {});

`;

exports[`no-async-fn-without-await > invalid(6): import {test} from \"node:test\";\ntest(\"title\", async t => {}); 2`] = `

Message:
  1 | import {test} from "node:test";
> 2 | test("title", async t => {});
    |               ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {test} from "node:test";
  2 | test("title", t => {});

`;

exports[`no-async-fn-without-await > invalid(7): import {beforeEach} from \"node:test\";\nbeforeEach(async () => { foo(); }, {timeout: 1000}); 1`] = `

  1 | import {beforeEach} from "node:test";
  2 | beforeEach(async () => { foo(); }, {timeout: 1000});

`;

exports[`no-async-fn-without-await > invalid(7): import {beforeEach} from \"node:test\";\nbeforeEach(async () => { foo(); }, {timeout: 1000}); 2`] = `

Message:
  1 | import {beforeEach} from "node:test";
> 2 | beforeEach(async () => { foo(); }, {timeout: 1000});
    |            ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {beforeEach} from "node:test";
  2 | beforeEach(() => { foo(); }, {timeout: 1000});

`;

exports[`no-async-fn-without-await > invalid(7): import {test as t} from \"node:test\";\nt(\"title\", async fn => {}); 1`] = `

  1 | import {test as t} from "node:test";
  2 | t("title", async fn => {});

`;

exports[`no-async-fn-without-await > invalid(7): import {test as t} from \"node:test\";\nt(\"title\", async fn => {}); 2`] = `

Message:
  1 | import {test as t} from "node:test";
> 2 | t("title", async fn => {});
    |            ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {test as t} from "node:test";
  2 | t("title", fn => {});

`;

exports[`no-async-fn-without-await > invalid(8): import * as nodeTest from \"node:test\";\nnodeTest.test(\"title\", async t => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test("title", async t => {});

`;

exports[`no-async-fn-without-await > invalid(8): import * as nodeTest from \"node:test\";\nnodeTest.test(\"title\", async t => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.test("title", async t => {});
    |                        ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test("title", t => {});

`;

exports[`no-async-fn-without-await > invalid(8): import {after} from \"node:test\";\nafter(async () => {}, {timeout: 1}); 1`] = `

  1 | import {after} from "node:test";
  2 | after(async () => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(8): import {after} from \"node:test\";\nafter(async () => {}, {timeout: 1}); 2`] = `

Message:
  1 | import {after} from "node:test";
> 2 | after(async () => {}, {timeout: 1});
    |       ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {after} from "node:test";
  2 | after(() => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(9): import {afterEach} from \"node:test\";\nafterEach(async () => {}, {timeout: 1}); 1`] = `

  1 | import {afterEach} from "node:test";
  2 | afterEach(async () => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(9): import {afterEach} from \"node:test\";\nafterEach(async () => {}, {timeout: 1}); 2`] = `

Message:
  1 | import {afterEach} from "node:test";
> 2 | afterEach(async () => {}, {timeout: 1});
    |           ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {afterEach} from "node:test";
  2 | afterEach(() => {}, {timeout: 1});

`;

exports[`no-async-fn-without-await > invalid(9): import {it} from \"node:test\";\nit(\"title\", async t => {}); 1`] = `

  1 | import {it} from "node:test";
  2 | it("title", async t => {});

`;

exports[`no-async-fn-without-await > invalid(9): import {it} from \"node:test\";\nit(\"title\", async t => {}); 2`] = `

Message:
  1 | import {it} from "node:test";
> 2 | it("title", async t => {});
    |             ^^^^^ Async test/hook function has no \`await\`, \`for await\`, \`await using\` or \`yield\`.

Suggestion 1/1: Remove the \`async\` keyword.:
  1 | import {it} from "node:test";
  2 | it("title", t => {});

`;
